alignment-fixes, favicon, and padding adjustments

--- a/css/style.css
+++ b/css/style.css
@@ -69,8 +69,8 @@ section {
 p {
     align-self: center;
     text-align: left;
-    padding-left: .65rem;
-    margin: 1rem;
+    padding-left: .75rem;
+    margin: 3.25vw;
 }
 
 img{
@@ -117,6 +117,7 @@ h3 {font-size: var(--fs-h3)}
 
 .section__title--intro {
     font-weight: var(--fw-reg);
+    margin-top: 2rem;
 }
 
 .section__title--intro strong {
@@ -132,6 +133,10 @@ h3 {font-size: var(--fs-h3)}
     height: 2.5rem;
     align-items: center;
     justify-content: center;
+}
+
+.title .subtitle {
+    text-align: center;
 }
 
 /* header */
@@ -257,6 +262,10 @@ header {
         position: relative;
         z-index: 2;
     }    
+
+    .section__title--intro {
+        margin-top: 0;
+    }
 }
 
 /* Skills/Experience */
@@ -265,7 +274,7 @@ header {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 10px;
-    margin-left: 1.65rem;
+    margin-left: 4.5vw;
 }
 
 #skills-list ::marker {
